# SmartComponentsToolkit

./: .gitignore  CHANGELOG.md  CLAUDE.md  HOMEY_COMMUNITY_LISTING.md  README.md  package-lock.json  package.json  run_homey_remote_with_log.ps1
.claude/: settings.local.json
apps/dashboard/: README.md  package-lock.json  package.json  vite.config.ts
apps/dashboard-desktop/: README.md  package-lock.json  package.json
apps/dashboard-shared/: package-lock.json  package.json  tsconfig.json
apps/dashboard/src-tauri/: Cargo.toml  tauri.conf.json
apps/dashboard/src-tauri/capabilities/: default.json  toast.json
apps/dashboard/src-tauri/src/: lib.rs
docs/: index.html
docs/docs/: circadian-light-group.html  conditional-gates.html  devices.html  flow-cards.html  getting-started.html  state-capture-device.html  state-device.html  waiter-gates.html
docs/tools/: boolean-editor.html  clg-editor.html  emulator.html  floorplan-editor.html  flow-doctor.html  formula-builder.html  state-editor-api.html  state-editor.html
no.tiwas.booleantoolbox/: .homeychangelog.json  CircadianLightGroupDevice.test.js  CircadianProfile.test.js  DOCUMENTATION_PROMPT_TEMPLATE.md  NumericComparison.test.js  README.txt  app.js  index.html  jest.config.js  package-lock.json  package.json  robots.md  run_test.ps1
no.tiwas.booleantoolbox/lib/: AnchorResolver.js  BaseLogicDriver.js  BaseLogicUnit.js  CapturedStateManager.js  CircadianProfile.js  FormulaEvaluator.js  Logger.js  NumericComparison.js  OutdoorLightProvider.js  WaiterManager.js
worker/: README.md  package.json  wrangler.toml
(+124 files in other folders)
