[package]
name = "homey-toolbox-dashboard"
version = "0.0.1"
description = "Floating dashboard for Homey flows"
authors = ["Lars Kvanum"]
edition = "2021"

[lib]
name = "homey_toolbox_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"
tauri-plugin-global-shortcut = "2"
device_query = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
